logs/validate.20260331-195321.log
error[E0277]: `T` cannot be sent between threads safely
   --> src/Chap19/ArraySeqMtEph.rs:656:21
    |
655 |             let deflated = Self::map(
    |                            --------- required by a bound introduced by this call
656 |                     a,
    |                     ^ `T` cannot be sent between threads safely
    |
note: required by a bound in `Chap19::ArraySeqMtEph::ArraySeqMtEph::ArraySeqMtEphTrait::map`
   --> src/Chap19/ArraySeqMtEph.rs:434:35
    |
433 | ...   fn map<U: Clone + Send + Sync + 'static, F: Fn(&T) -> U + Send + Sync + Clone + 'static>(a: &ArraySeqMtEphS<T>, f: &F) -> (ma...
    |          --- required by a bound in this associated function
434 | ...       where T: Clone + Eq + Send + Sync + 'static
    |                                 ^^^^ required by this bound in `ArraySeqMtEphTrait::map`
help: consider restricting type parameter `T` with trait `Send`
    |
482 |     impl<T: std::marker::Send> ArraySeqMtEphTrait<T> for ArraySeqMtEphS<T> {
    |           +++++++++++++++++++

error[E0277]: `T` cannot be shared between threads safely
   --> src/Chap19/ArraySeqMtEph.rs:656:21
    |
655 |             let deflated = Self::map(
    |                            --------- required by a bound introduced by this call
656 |                     a,
    |                     ^ `T` cannot be shared between threads safely
    |
note: required by a bound in `Chap19::ArraySeqMtEph::ArraySeqMtEph::ArraySeqMtEphTrait::map`
   --> src/Chap19/ArraySeqMtEph.rs:434:42
    |
433 | ...   fn map<U: Clone + Send + Sync + 'static, F: Fn(&T) -> U + Send + Sync + Clone + 'static>(a: &ArraySeqMtEphS<T>, f: &F) -> (ma...
    |          --- required by a bound in this associated function
434 | ...       where T: Clone + Eq + Send + Sync + 'static
    |                                        ^^^^ required by this bound in `ArraySeqMtEphTrait::map`
help: consider restricting type parameter `T` with trait `Sync`
    |
482 |     impl<T: std::marker::Sync> ArraySeqMtEphTrait<T> for ArraySeqMtEphS<T> {
    |           +++++++++++++++++++

error[E0277]: `T` cannot be sent between threads safely
   --> src/Chap19/ArraySeqMtEph.rs:655:28
    |
655 |               let deflated = Self::map(
    |  ____________________________^
656 | |                     a,
657 | |                     &(|x: &T| -> (d: ArraySeqMtEphS<T>)
658 | |                         requires
...   |
667 | |                     }),
668 | |                 );
    | |_________________^ `T` cannot be sent between threads safely
    |
note: required because it appears within the type `std::marker::PhantomData<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/core/src/marker.rs:819:11
note: required because it appears within the type `alloc::raw_vec::RawVec<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/alloc/src/raw_vec/mod.rs:73:18
note: required because it appears within the type `std::vec::Vec<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/alloc/src/vec/mod.rs:440:11
note: required because it appears within the type `Chap19::ArraySeqMtEph::ArraySeqMtEph::ArraySeqMtEphS<T>`
   --> src/Chap19/ArraySeqMtEph.rs:68:16
    |
 68 |     pub struct ArraySeqMtEphS<T> {
    |                ^^^^^^^^^^^^^^
note: required by a bound in `Chap19::ArraySeqMtEph::ArraySeqMtEph::ArraySeqMtEphTrait::map`
   --> src/Chap19/ArraySeqMtEph.rs:433:27
    |
433 | ...   fn map<U: Clone + Send + Sync + 'static, F: Fn(&T) -> U + Send + Sync + Clone + 'static>(a: &ArraySeqMtEphS<T>, f: &F) -> (ma...
    |                         ^^^^ required by this bound in `ArraySeqMtEphTrait::map`
help: consider restricting type parameter `T` with trait `Send`
    |
482 |     impl<T: std::marker::Send> ArraySeqMtEphTrait<T> for ArraySeqMtEphS<T> {
    |           +++++++++++++++++++

error[E0277]: `T` cannot be shared between threads safely
   --> src/Chap19/ArraySeqMtEph.rs:655:28
    |
655 |               let deflated = Self::map(
    |  ____________________________^
656 | |                     a,
657 | |                     &(|x: &T| -> (d: ArraySeqMtEphS<T>)
658 | |                         requires
...   |
667 | |                     }),
668 | |                 );
    | |_________________^ `T` cannot be shared between threads safely
    |
note: required because it appears within the type `std::marker::PhantomData<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/core/src/marker.rs:819:11
note: required because it appears within the type `alloc::raw_vec::RawVec<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/alloc/src/raw_vec/mod.rs:73:18
note: required because it appears within the type `std::vec::Vec<T>`
   --> /rustc/4a4ef493e3a1488c6e321570238084b38948f6db/library/alloc/src/vec/mod.rs:440:11
note: required because it appears within the type `Chap19::ArraySeqMtEph::ArraySeqMtEph::ArraySeqMtEphS<T>`
   --> src/Chap19/ArraySeqMtEph.rs:68:16
    |
 68 |     pub struct ArraySeqMtEphS<T> {
    |                ^^^^^^^^^^^^^^
note: required by a bound in `Chap19::ArraySeqMtEph::ArraySeqMtEph::ArraySeqMtEphTrait::map`
   --> src/Chap19/ArraySeqMtEph.rs:433:34
    |
433 | ...   fn map<U: Clone + Send + Sync + 'static, F: Fn(&T) -> U + Send + Sync + Clone + 'static>(a: &ArraySeqMtEphS<T>, f: &F) -> (ma...
    |                                ^^^^ required by this bound in `ArraySeqMtEphTrait::map`
help: consider restricting type parameter `T` with trait `Sync`
    |
482 |     impl<T: std::marker::Sync> ArraySeqMtEphTrait<T> for ArraySeqMtEphS<T> {
    |           +++++++++++++++++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
Elapsed: 2s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 24305MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
